# SO1-Proyecto1

./: README.md
GoApi/: GoApi.sh  index.go
GoContainer/: Dockerfile  GoContainer.sh  index.go
PythonContainer/: Dockerfile  PythonApi.sh  index.py
PythonContainer/templates/: index.html
RustContainer/: Cargo.toml  Dockerfile  GoContainer.sh
RustContainer/Template/: index.html
RustContainer/src/: layout.html  main.rs
RustContainer/src/Template/: index.html
RustContainer/src/templates/: base.html
Template/: index.html
