[package]
name = "tera"
version = "1.2.0"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
license = "MIT"
readme = "README.md"
description = "Template engine based on Jinja2/Django templates"
homepage = "https://tera.netlify.com/"
repository = "https://github.com/Keats/tera"
keywords = ["template", "html", "django", "markup", "jinja2"]
categories = ["template-engine"]
edition = "2018"

[dependencies]
reqwest = "0.9.14"
futures = "0.1.21"
maud = "*"
rouille = "3.0.0"
tera = "1"
globwalk = "0.8"
serde = "1.0"
serde_json = "1.0"
pest = "2"
pest_derive = "2"
lazy_static = "1.0"
# used in striptags & titles filters. Already pulled by globwalk
regex = "1.0"

[dependencies.redis]
version = "*"