[package]
name = "pavel"
version = "1.2.0"
authors = ["Vincent Prouillet <hello@prouilletvincent.com>"]
license = "MIT"
readme = "README.md"
description = "Template engine based on Jinja2/Django templates"
homepage = "https://tera.netlify.com/"
repository = "https://github.com/Keats/tera"
keywords = ["template", "html", "django", "markup", "jinja2"]
categories = ["template-engine"]
edition = "2018"

[dependencies]
openssl-sys = "0.9.29"
rouille = "3.0.0"
reqwest = "0.9.14"
tokio = "0.1.18"
futures = "0.1.21"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.106"
chrono = "0.4"

[dependencies.redis]
version = "*"